--- a/DynamoDB.ProductosApp/Views/Productos/Index.cshtml
+++ b/DynamoDB.ProductosApp/Views/Productos/Index.cshtml
@@ -4,37 +4,54 @@
     ViewData["Title"] = "Home Page";
 }
 
-<a asp-controller="Productos" asp-action="Create"
-class="btn btn-primary my-2 float-md-right">Add Reader</a>
+<div class="row my-3 justify-content-between">
+    <div class="  col-5 col-lg-3">
+        <a asp-controller="Productos" asp-action="Create"
+           class="btn btn-primary my-2 float-md-right">Añadir producto</a>
+    </div>
+    <div class=" col-5 col-lg-3">
+         <div class="col ">
+            <form class="form" method="get" asp-controller="Productos" asp-action="Index">
+                <div class="input-group ">
+                    <div class="form-floating">
+                    <input type="text" name="nombre" class="form-control" id="nameFloting"
+                           placeholder="Nombre de articulo" aria-label="nombre" aria-describedby="button-addon2" />
+                    <label for="nameFloting" class=" form-label">Nombre de articulo</label>
+                    </div>
+                    <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Buscar</button>
+                </div>
+            </form>
+        </div>
+        <div class="col">
+            @if (Model.ResultType == DynamoDB.Contracts.ResultType.Search)
+            {
+                <td class="py-md-3">
+                    <a class="py-4 stretched-link" asp-controller="Productos" asp-action="Index" class="btn btn-outline-success">Limpiar</a>
+                </td>
+            }
+        </div>
+    </div>
 
-<table class="table">
+</div>
+
+<table class="table table-striped">
     <thead>
-        <tr>
+        <tr class="table-dark">
             <th>Id</th>
             <th>Nombre</th>
             <th>Precio</th>
             <th>Stock</th>
-            <th>Acciones Proveedores</th>
-            <th>Proveedores</th>
+            <th>Añadir Proveedores</th>
+            <th>Lista de Proveedores</th>
+            <td  colspan="2"></td>
         </tr>
     </thead>
     <tbody>
         <tr class="mx-auto">
             <td>
-                <form class="form" method="get" asp-controller="Productos" asp-action="Index">
-                    <div class="input-group mb-3">
-                        <input type="text" name="userName" class="form-control"
-                               placeholder="User Name" aria-label="UserName" aria-describedby="button-addon2" />
-                        <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Buscar</button>
-                    </div>
-                </form>
+                
             </td>
-            @if (Model.ResultType == DynamoDB.Contracts.ResultType.Search)
-            {
-                <td class="py-md-3">
-                    <a class="py-4 stretched-link" asp-controller="Productos" asp-action="Index">Limpiar</a>
-                </td>
-            }
+     
         </tr>
         @foreach (DynamoDB.Contracts.Producto row in Model.Productos)
         {
@@ -46,26 +63,26 @@ class="btn btn-primary my-2 float-md-right">Add Reader</a>
                 <td>
                     <div class="d-flex justify-content-center">
                         <div class=" btn-group">
-                            <a asp-controller="Prductos" asp-action="AddProvider" asp-route-productoId="@row.Id">Añadir</a>
-                            <a asp-controller="Prductos" asp-action="Edit" asp-route-productoId="@row.Id">Eliminar</a>
+                            <a asp-controller="Productos" asp-action="AddProvider" asp-route-productoId="@row.Id" class="btn btn-outline-dark">Proveedores</a>
                         </div>
                     </div>
 
                 </td>
-                <td>
-                    <select asp-items="@new SelectList(row.Proveedores)" class="form-control">
-
+                <td class="form-floating">
+                    <select asp-items="@new SelectList(row.Proveedores)" id="selectFloting" class="form-control">
                  </select>
+                    <label for="selectFloting">Listado de proveedores</label>
+
                 </td>
 
-                <td><a asp-controller="Productos" asp-action="Edit" asp-route-productoId="@row.Id">Edit</a></td>
-                <td><a asp-controller="Productos" asp-action="Delete" asp-route-productoId="@row.Id">Delete</a></td>
+                <td><a asp-controller="Productos" asp-action="Edit" asp-route-productoId="@row.Id" class="btn btn-outline-warning">Edit</a></td>
+                <td><a asp-controller="Productos" asp-action="Delete" asp-route-productoId="@row.Id" class="btn btn-outline-danger">Delete</a></td>
             </tr>
         }
         @if (Model == null || Model.Productos.Count() == 0)
         {
             <tr>
-                <td colspan="6">No records found</td>
+                <td colspan="6">NO existen registros</td>
             </tr>
         }
     </tbody>
